<resources>
    <string name="app_name">BaseetCustomer</string>
     <string name="channel_id" translatable="false">BaseetCustomer-channel</string>
    <string name="channel_name" translatable="false">BaseetCustomer</string>
    <string name="Home_Ar">مجدولة</string>
    <string name="arrival">وصلت</string>
    <string name="departed">غادرت</string>
    <string name="cancelled">الغيت</string>
    <string name="booking_detail">Booking Detail</string>
    <string name="olive_yew">Olive Yew</string>
    <string name="pending">Pending</string>
    <string name="turkis_to_arabic">Turkis to Arabic</string>
    <string name="_7_23_to_8_23">7:23 to 8:23</string>
    <string name="description">Description</string>
    <string name="as_documents_this_is_the_description_as_documents_this_is_the_description_as_documents_this_is_the_description">As Documents this is the description As Documents this is the description As Documents this is the description</string>
    <string name="home_deatial">Home Deatial</string>
    <string name="country_name_india">Country Name : India</string>
    <string name="on_call">On Call</string>
    <string name="_27_05_2024_27_05_2024">27/05/2024,27/05/2024</string>
    <string name="price_30">Price : $ 30</string>
    <string name="enter_reason">Enter Reason</string>
    <string name="reject">Reject</string>
    <string name="accept">Accept</string>
    <string name="car_rental">Car Rental</string>
    <string name="Price">Price : $</string>
    <string name="name">Name :</string>
    <string name="nameN">Name</string>
     <string name="No_Of_Person">No Of Person :</string>
    <string name="country_name">Country Name :</string>
    <string name="Home_Type">Home Type : </string>
    <string name="No_Of_Family">No Of Family :</string>
    <string name="traveling_person">Traveling Person</string>
    <string name="comment">Comment</string>
    <string name="enter_comment">Enter Comment</string>
    <string name="car_type">Car Type</string>
    <string name="driving_type">Driving Type</string>
    <string name="self_draving">Self-Draving</string>
    <string name="with_driver">With Driver</string>
    <string name="rent_date">Rent Date</string>
    <string name="select_rent_date">Select Rent Date</string>
    <string name="start_time">Start time</string>
    <string name="end_time">End time</string>
    <string name="expected_rent">Expected Rent</string>
    <string name="enter_cost">Enter Cost</string>
    <string name="request_for_car">Request for Car</string>
    <string name="change_password">Change Password</string>
    <string name="old_password">Old Password</string>
    <string name="enter_old_password">Enter Old Password</string>
    <string name="new_password">New Password</string>
    <string name="enter_new_password">Enter New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="enter_confirm_password">Enter Confirm Password</string>
    <string name="save">Save</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="maureen_biologist">Maureen Biologist</string>
    <string name="info099_gmail_com">info099@gmail.com</string>
    <string name="first_name">First Name</string>
    <string name="enter_fist_name">Enter Fist Name</string>
    <string name="last_name">Last Name</string>
    <string name="enter_last_name">Enter Last Name</string>
    <string name="email_address">Email Address</string>
    <string name="enter_email_address">Enter Email Address</string>
    <string name="edit">Edit</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="please_enter_your_email_address_and_we_will_n_send_you_a_one_time_password_otp">Please enter your email address and we will \n send you a one-time password(OTP).</string>
    <string name="send">Send</string>
    <string name="home_rental">Home Rental</string>
    <string name="family_person">Family Person</string>
    <string name="adults">Adults</string>
    <string name="_1">1</string>
    <string name="childs">Childs</string>
    <string name="_0">0</string>
    <string name="home_type">Home Type</string>
    <string name="home_details">Home Details</string>
    <string name="enter_deatils">Enter Deatils</string>
    <string name="enter_description">Enter Description</string>
    <string name="request_for_home">Request for Home</string>
    <string name="login_in">Login In</string>
    <string name="please_fill_below_details_to_continue">Please fill below details to continue</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="password">Password</string>
    <string name="enter_your_password">Enter Your Password</string>
    <string name="log_in">Log In</string>
    <string name="new_user">New User?</string>
    <string name="create_account">Create Account</string>
    <string name="home">Home</string>
    <string name="My_Bookings">My Bookings</string>
    <string name="Order_List">Order List</string>
    <string name="Profile">Profile</string>
    <string name="order_detail_view">Order Detail View</string>
    <string name="order_detail">Order Detail</string>
    <string name="no_data_found">No Data Found</string>
    <string name="order">Order</string>
    <string name="_00">00</string>
    <string name="service_date">Service Date:</string>
    <string name="_00_00_0000">00 00 0000</string>
    <string name="processing">Processing</string>
    <string name="order_details">Order Details:</string>
    <string name="from">From Language :</string>
    <string name="to">To Language :</string>
    <string name="type">Translator Type :</string>
    <string name="Select_an_Image_First">Select an Image First</string>
    <string name="na">NA</string>
    <string name="Enter_Password">Enter Password</string>
    <string name="order_payment">Order Payment :</string>
    <string name="Please_Select_Payment_Type">Please Select Payment Method</string>
    <string name="pay_type">Pay Type :</string>
    <string name="traveling_persons">Traveling Persons :</string>
    <string name="driving_type_">Driving Type :</string>
    <string name="rent_type">Rent Type :</string>
    <string name="amenities">Amenities :</string>
    <string name="doller">$</string>
    <string name="discount">Discount :</string>
    <string name="_0mi">- 0 $</string>
    <string name="total">Total :</string>
    <string name="vendor">Vendor</string>
    <string name="brijraj_singh">Brijraj Singh</string>
    <string name="contact_info">Contact Info</string>
    <string name="at">\@</string>
    <string name="testios_gmail_com">Testios@gmail.com</string>
    <string name="_9887667567">9887667567</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="please_enter_one_time_password_otp_that_is_n_sent_to_xyz2gmail_com">Please enter one time password (OTP) that is\n sent to xyz2gmail.com</string>
    <string name="resend_otp_in">Resend OTP in</string>
    <string name="_00_24">00:24</string>
    <string name="submit">Submit</string>
    <string name="payment">Payment</string>
    <string name="full_amount_00_usd">Full Amount : 00 USD</string>
    <string name="payment_method">Payment Method</string>
    <string name="online">Online</string>
    <string name="bank_transfer">Bank Transfer</string>
    <string name="western_union_bank_transfer">Western Union Bank Transfer</string>
    <string name="transaction_receipt">Transaction Receipt</string>
    <string name="send_image">Send Image</string>
    <string name="order_now">Order Now</string>
    <string name="reset_password">Reset Password</string>
    <string name="please_reset_youre_password_by_entering_a_nnew_password">Please reset youre password by entering a \nnew password</string>
    <string name="reset">Reset</string>
    <string name="signup">Signup</string>
    <string name="enter_name">Enter Name</string>
    <string name="surname">Surname</string>
    <string name="enter_surname">Enter Surname</string>
    <string name="phone_number">Phone Number</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="translator">Translator</string>
    <string name="in_person">In Person</string>
    <string name="doc">Doc</string>
    <string name="choose">Choose</string>
    <string name="translation_form_language">Translation Form Language</string>
    <string name="translation_to_language">Translation To Language</string>
    <string name="service_hours">Service Hours</string>
    <string name="expected_cost">Expected Cost</string>
    <string name="request_for_translator">Request for Translator</string>
    <string name="select_langauge">Select Language</string>
    <string name="english">English</string>
    <string name="arabic">Arabic</string>
    <string name="service_request">Service Request</string>
    <string name="welcome_on">Welcome On</string>
    <string name="baseet">Baseet !</string>
    <string name="search_here">Search Here..</string>
    <string name="search_by_vendor">Search by Vendor</string>
    <string name="notification_settings">Notification Settings</string>
    <string name="abouts_us">Abouts Us</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="log_out">Log out</string>
    <string name="this_is_a_custom_toast">This is a custom Toast</string>
    <string name="usd_2000">USD 2000</string>
    <string name="qatar">Qatar</string>
    <string name="time">Time :</string>
    <string name="_7_23_to_8_23_7_23_to_8_23">7:23 to 8:23,7:23 to 8:23</string>
    <string name="view_detial">View Detial</string>
    <string name="dates">Dates :</string>
    <string name="_12_05_2024">12-05-2024</string>
    <string name="wood">wood</string>
    <string name="order_">Order :</string>
    <string name="vendor_">Vendor :</string>
    <string name="testio2">testio2</string>
    <string name="service_date_">Service Date :</string>
    <string name="date">Date :</string>
    <string name="order_status">Order Status :</string>
    <string name="delivered">Delivered</string>
    <string name="processing_">Processing</string>
    <string name="payment_status">Payment Status :</string>
    <string name="paid">Paid</string>
    <string name="type_">Type :</string>
    <string name="total_">Total :</string>
    <string name="view_detial_">View Detial</string>
    <string name="connect_with_the_vendor">Connect with the Vendor</string>
    <string name="as_documents">As Documents</string>
    <string name="_14_05_2024">14-05-2024</string>
    <string name="price_usd">Price USD :</string>
    <string name="Something_went_wrong">Something went wrong</string>
    <string name="Server_Error">Server Error</string>
    <string name="Completed">Completed</string>
    <string name="Your_Order_is_Placed">Your Order is Placed</string>
    <string name="Order_Accepted">Order Accepted</string>
    <string name="Please_select_Service_date">Please select Service date</string>
    <string name="Pay_Partia_Payment_USD">Pay Partial Payment :</string>
    <string name="Pay_Full_Payment_USD">Pay Full Payment : </string>
    <string name="Pay_Remaining_Payment_USD">Pay Remaining Payment : </string>
    <string name="Turkish">Turkish</string>
    <string name="Arabic">Arabic</string>
    <string name="English">English</string>
    <string name="Russian">Russian</string>
    <string name="Invalid_Phone_Password">Invalid Phone/Password</string>
    <string name="Login_Sucessfully">Login Successfully</string>
    <string name="Time">Time</string>
    <string name="Try_Again">Try Again</string>
    <string name="USD">USD</string>
    <string name="Requested">Requested</string>
    <string name="Language">Language</string>
    <string name="Translator_Language">Translator Language</string>
    <string name="Translator">Translator</string>
</resources>