<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SignUp.ResetPassword">


    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:background="@drawable/login_logo">

    </androidx.appcompat.widget.AppCompatImageView>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/reset_password"
                android:textColor="@color/black"
                android:textSize="20sp">

            </androidx.appcompat.widget.AppCompatTextView>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/please_reset_youre_password_by_entering_a_nnew_password"
                android:textColor="@color/black"
                android:textSize="14sp">

            </androidx.appcompat.widget.AppCompatTextView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/poppins_bold"
                    android:text="@string/new_password"
                    android:textColor="@color/black"
                    android:textSize="12sp">

                </androidx.appcompat.widget.AppCompatTextView>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="15dp"
                android:background="@drawable/corner"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/edtPasswordOld"
                    android:layout_width="0dp"
                    android:layout_height="45dp"
                    android:layout_marginEnd="5dp"
                    android:layout_weight="1"
                    android:background="@null"
                    android:hint="@string/enter_new_password"
                    android:inputType="textPassword"
                    android:padding="10dp"
                    android:textSize="14sp">

                </androidx.appcompat.widget.AppCompatEditText>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginEnd="10dp">


                    <ImageView
                        android:id="@+id/password_toggleOld"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:padding="3dp"
                        android:src="@drawable/ic_baseline_visibility_24"
                        android:visibility="gone"
                        app:layout_constraintBottom_toBottomOf="@+id/passwordEdt"
                        app:layout_constraintEnd_toEndOf="@+id/passwordEdt"
                        app:layout_constraintTop_toTopOf="@+id/passwordEdt"
                        app:tint="@color/black" />

                    <ImageView
                        android:id="@+id/password_toggleOffOld"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:background="?actionBarItemBackground"
                        android:padding="3dp"
                        android:src="@drawable/ic_baseline_visibility_off_24"
                        app:layout_constraintBottom_toBottomOf="@+id/passwordEdt"
                        app:layout_constraintEnd_toEndOf="@+id/passwordEdt"
                        app:layout_constraintTop_toTopOf="@+id/passwordEdt"
                        app:tint="@color/black" />

                </LinearLayout>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/poppins_bold"
                    android:text="@string/confirm_password"
                    android:textColor="@color/black"
                    android:textSize="12sp">

                </androidx.appcompat.widget.AppCompatTextView>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="15dp"
                android:background="@drawable/corner"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/edtPasswordConfirm"
                    android:layout_width="0dp"
                    android:layout_height="45dp"
                    android:layout_marginEnd="5dp"
                    android:layout_weight="1"
                    android:background="@null"
                    android:hint="@string/enter_confirm_password"
                    android:inputType="textPassword"
                    android:padding="10dp"
                    android:textSize="14sp">

                </androidx.appcompat.widget.AppCompatEditText>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginEnd="10dp">


                    <ImageView
                        android:id="@+id/password_toggle"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:padding="3dp"
                        android:src="@drawable/ic_baseline_visibility_24"
                        android:visibility="gone"
                        app:layout_constraintBottom_toBottomOf="@+id/passwordEdt"
                        app:layout_constraintEnd_toEndOf="@+id/passwordEdt"
                        app:layout_constraintTop_toTopOf="@+id/passwordEdt"
                        app:tint="@color/black" />

                    <ImageView
                        android:id="@+id/password_toggleOff"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:background="?actionBarItemBackground"
                        android:padding="3dp"
                        android:src="@drawable/ic_baseline_visibility_off_24"
                        app:layout_constraintBottom_toBottomOf="@+id/passwordEdt"
                        app:layout_constraintEnd_toEndOf="@+id/passwordEdt"
                        app:layout_constraintTop_toTopOf="@+id/passwordEdt"
                        app:tint="@color/black" />

                </LinearLayout>

            </LinearLayout>


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnReset"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/gradient_button"
                android:fontFamily="@font/poppins_regular"
                android:gravity="center"
                android:text="@string/reset"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:textStyle="bold">

            </androidx.appcompat.widget.AppCompatButton>


        </LinearLayout>
    </ScrollView>
</androidx.appcompat.widget.LinearLayoutCompat>